# Midres

./: .gitignore  Cargo.toml  LICENSE  README.md
map-injector/: Cargo.toml
map-injector/src/: main.rs
midres-common/: Cargo.toml
midres-common/src/: lib.rs
midres-gen/: Cargo.toml
midres-gen/src/: bundle.rs  compress.rs  config.rs  crypto.rs  donut_instance.rs  error.rs  hash.rs  instance.rs  loader_x64.rs  loader_x86.rs  main.rs  output.rs  pe.rs  random.rs
